--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@ body {
   background-color: #000;
   overflow-x: hidden;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Make sure the body takes full height */
+  flex-direction: column;
 }
 
 /* AGE POPUP */
@@ -89,7 +94,13 @@ body {
   display: none;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 80px 20px 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 /* FAKE VIDEO STYLE */
